# QtBricks

./: .gitignore  CMakeLists.txt  README.md
UT/: CMakeLists.txt  tst_ball.cpp  tst_brick.cpp  tst_paddle.cpp  tst_scoremanager.cpp
doc/: design.md
include/: Ball.h  Brick.h  GameWidget.h  Paddle.h  ScoreManager.h
src/: Ball.cpp  Brick.cpp  GameWidget.cpp  Paddle.cpp  ScoreManager.cpp  main.cpp
